--- a/App/NotepadOfExcursionist/src/main/webapp/css/style.css
+++ b/App/NotepadOfExcursionist/src/main/webapp/css/style.css
@@ -27,6 +27,10 @@ nav {
     margin: 0 auto;
 }
 
+.img_div{
+    margin: 0 auto;
+}
+
 footer {
     width: 100%;
     height: 5em;
@@ -166,6 +170,15 @@ footer {
     height: 100%;
     background: rgb(0,0,0);
     background: linear-gradient(305deg, rgba(0,0,0,0.60) 55%, rgba(255,255,255,0.60) 77%);
+}
+
+/* Update note */
+
+#update_note_body{
+    background-image: url("../img/sky.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 /* Mobile */
